# hate-speech-detector

./: .gitignore  README.md  pyproject.toml
examples/: custom_references.json
src/hate_speech_detector/: classifier.py  cli.py  extractor.py  llm_verifier.py  models.py  pipeline.py  reporter.py  server.py  transcriber.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_extractor.py  test_llm_verifier.py  test_reporter.py  test_server.py  test_transcriber.py
