[project]
name = "hate-speech-detector"
version = "0.3.0"
description = "Detect hate speech in video files with timestamped probability reports"
requires-python = ">=3.11"
# System requirement: ffmpeg must be installed (brew install ffmpeg)
dependencies = [
    "mlx-whisper>=0.4.0",
    "sentence-transformers>=3.0.0,<4.0",
    "torch>=2.2.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
]

[project.scripts]
hate-speech-detector = "hate_speech_detector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hate_speech_detector"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]
